Bug 79822 - FILESAVE : Crash:LO Crashes while Saving the DOCX containing smartart
Summary: FILESAVE : Crash:LO Crashes while Saving the DOCX containing smartart
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.beta2
Hardware: Other All
: medium normal
Assignee: Priyanka Gaikwad
URL:
Whiteboard: target:4.4.0 target:4.3.0.1
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-06-09 08:59 UTC by Priyanka Gaikwad
Modified: 2014-06-10 13:01 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
DOCX file containing smartart (39.94 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-09 08:59 UTC, Priyanka Gaikwad
Details
clip of WordArt after round trip from Word 2007 - LibreOffice 4.3.0 (35.91 KB, image/jpeg)
2014-06-09 13:51 UTC, V Stuart Foote
Details
New Doc (17.56 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-10 08:01 UTC, Priyanka Gaikwad
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Priyanka Gaikwad 2014-06-09 08:59:09 UTC
Created attachment 100708 [details]
DOCX file containing smartart

Docx file containing smartart.
The attached DOCX file was created in MS-Word 2007
Steps to reproduce :

1) Open attached file on latest LO build.
2) Save file as .docx after loading.

Current behaviour:
File gets crashed while saving.

Expected behaviour :
LO should save file properly.
Comment 1 V Stuart Foote 2014-06-09 13:51:48 UTC
Created attachment 100739 [details]
clip of WordArt after round trip from Word 2007 - LibreOffice 4.3.0

On Windows 7 sp1, 64-bit (en-US)
Version: 4.3.0.0.beta2
Build ID: a06aa316117a6ff0f05c697c82831c227812d810

Unable to reproduce as the attached .docx opens in LODev 4.3.0 beta2 with incorrect rendering of the word art. But does not crash if saved as a copy back to .docx

The attached file opens correctly in Word 2007, and when saved from Word 2007 as OOXML .ODT, that .odt then opens correctly in LODev 4.3.0 beta2. 

But if saved round trip back to OOXML .docx, the Word art loses detail.

Setting to needinfo.
Comment 2 V Stuart Foote 2014-06-09 13:58:44 UTC
No crash observed. But there are fidelity issues with the Word Art, both opening the .docx in LO 4.3.0 beta2 Writer, as well as taking the document back through MS Word 2007 to OOXML .ODT -> LibreOffice Writer and exporting to MS OOXML .DOCX

@Priyanka, please export the document from Word -> OOXML .ODT -> LibreOffice and then back to OOXML .DOCX; do you then get the same loss of detail in the SmartArt?
Comment 3 Priyanka Gaikwad 2014-06-10 08:01:45 UTC
Created attachment 100790 [details]
New Doc
Comment 4 Commit Notification 2014-06-10 12:52:25 UTC
PriyankaGaikwad committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=178550923533b7c015e29d957a2fc3857ba73eb3

fdo#79822 : Crash:LO Crashes while Saving the DOCX containing smartart



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Stahl (allotropia) 2014-06-10 12:59:11 UTC
looks like a regression from commit 6536826f2f4c747582d60ed40b0418c6a67a9829,
thanks for fixing that
Comment 6 Commit Notification 2014-06-10 13:01:17 UTC
PriyankaGaikwad committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=713c639ce5ba6371e9c0d9ff51be7cf4c68d3d4c&h=libreoffice-4-3

fdo#79822 : Crash:LO Crashes while Saving the DOCX containing smartart


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.